stop image layout flickering

--- a/app/assets/stylesheets/components/_search_form.scss
+++ b/app/assets/stylesheets/components/_search_form.scss
@@ -58,10 +58,11 @@ input[type=radio]:checked + label {
     margin-left: 10px;
     color: #6D6D6D;
     text-align: left;
+    flex-grow: 1;
   }
   img {
     height: 85px;
-    width: 85px;
+    min-width: 85px;
     margin: 10px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.31);
   }
